--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
 
     <title>Abuzar Ghifary Profile</title>
@@ -16,7 +17,7 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark transparent" id="nav1">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><strong>Abuzar Ghifary</strong> </a>
+    <a class="navbar-brand" ><strong>Abuzar Ghifary</strong> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,6 +31,17 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="ability.html">Ability</a>
+        </li>
+        <li class="nav-item dropdown position-absolute top-50 end-0 translate-middle-y">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Contact me
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="https://www.instagram.com/"><i class="bi bi-instagram"></i> instagram</a></li>
+            <li><a class="dropdown-item" href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i> linkedin</a></li>
+            <li><a class="dropdown-item" href="https://www.facebook.com/"><i class="bi bi-facebook"></i>facebook</a></li>
+            <li><a class="dropdown-item" href="https://www.whatsapp.com/"><i class="bi bi-whatsapp"></i>whatsapp</a></li>
+          </ul>
         </li>
       </ul>
     </div>
