--- a/ability.html
+++ b/ability.html
@@ -32,7 +32,7 @@
         <li class="nav-item">
           <a class="nav-link active" href="ability.html">Ability</a>
         </li>
-        <li class="nav-item dropdown position-absolute top-50 end-0 translate-middle-y ">
+        <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Contact me
           </a>
