tambah img title

--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+    <link rel="icon" href="img/AZAR.jpg" type="image/png">
+
+
 
     <title>Abuzar Ghifary Profile</title>
   </head>
